# neige

./: .gitignore  Cargo.toml  README.md
crates/calm-server/: Cargo.toml
crates/calm-server/src/: config.rs  error.rs  event.rs  main.rs  model.rs  state.rs
crates/calm-server/src/db/: mod.rs  sqlite.rs
crates/calm-server/src/plugin_host/: mod.rs
crates/calm-server/src/routes/: cards.rs  coves.rs  overlays.rs  plugins.rs  terminal.rs  waves.rs
crates/calm-server/src/ws/: events.rs  terminal.rs
crates/calm-server/tests/: repo.rs  ws_events.rs
crates/neige-connect/: Cargo.toml
crates/neige-connect/src/: main.rs
crates/neige-server/: Cargo.toml
crates/neige-server/src/: main.rs  session.rs  tmux.rs  tunnel.rs
crates/neige-server/src/api/: chat_ws.rs  config.rs  conversations.rs  fs.rs  mod.rs  proxy.rs  share.rs  util.rs  ws.rs
crates/neige-server/src/attach/: chat.rs  daemon.rs  mod.rs
crates/neige-server/src/auth/: login.html  middleware.rs  mod.rs  origin.rs  routes.rs  store.rs  token.rs
crates/neige-server/src/conversation/: mod.rs
crates/neige-server/src/mcp/: chat.rs  mod.rs  protocol.rs  registry.rs
crates/neige-server/src/mcp/tools/: answer_question.rs  ask_question.rs  create_session.rs  delete_session.rs  get_info.rs  introduce.rs  list_sessions.rs  mod.rs  read_log.rs  resume_session.rs  send_message.rs  stop.rs  todo_read.rs  todo_write.rs
crates/neige-server/src/pty/: mod.rs
crates/neige-session/: Cargo.toml
crates/neige-session/src/: lib.rs
crates/neige-session/src/stream_json/: map.rs  mod.rs  raw.rs  unified.rs
crates/neige-session/tests/: chat_e2e.rs  stream_json.rs
crates/neige-session/tests/fixtures/: stub-runner.mjs
runners/neige-chat-runner/: package-lock.json  package.json  tsconfig.json
runners/neige-chat-runner/src/: cli.ts  control.ts  debug.ts  mapper.ts  queue.ts  types.ts
runners/neige-chat-runner/src/permissions/: askUserQuestion.ts  registry.ts  types.ts
runners/neige-chat-runner/tests/: control.test.ts  mapper.test.ts  permissions.test.ts  queue.test.ts
runners/neige-chat-runner/tests/manual/: aq_headless.mjs
src/: main.rs
src/api/: mod.rs
src/conversation/: mod.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
web-calm/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-calm/src/: AuthGate.tsx  CalmApp.tsx  LoginPage.tsx  XtermView.tsx  calm.css  main.tsx  pages.tsx  types.ts  ui.tsx
web-calm/src/api/: adapt.ts  calm.ts  wire.ts
web-calm/src/hooks/: useKernel.ts
web-mobile/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web-mobile/public/: manifest.webmanifest
web-mobile/src/: App.css  App.tsx  api.ts  authStore.ts  cardActivity.ts  index.css  main.tsx  types.ts  useAuth.ts  useCardStack.ts  useConversations.ts  useLongPress.ts  useTerminal.ts
web-mobile/src/components/: AddSheet.tsx  CardMenu.tsx  ChatPane.tsx  ComposeBar.tsx  DirPicker.tsx  JumpToBottom.tsx  KeyBar.tsx  Login.tsx  Overview.tsx  ScrollEdge.tsx  TerminalPane.tsx
web/src/: App.css  App.tsx  api.ts  index.css  main.tsx
web/src/components/: ChatPanel.tsx  ConfirmDialog.tsx  CreateDialog.tsx  FilePicker.tsx  FileViewer.tsx  PortForwardPanel.tsx  QuickLauncher.tsx  ShareDialog.tsx  Sidebar.tsx  TaskPanel.tsx  TerminalPanel.tsx  WebView.tsx
web/src/components/chat/: ChatView.tsx  (+6 more)
web/src/hooks/: terminalBusy.ts  useConfig.ts  useConversations.ts  useTerminal.ts
web/src/types/: index.ts
(+3 files in other folders)
