[package]
name = "calm-server"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "calm-server"
path = "src/main.rs"

[dependencies]
# HTTP / WS
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serde + JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Storage
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "sqlite", "macros", "migrate", "chrono", "json"] }

# IDs / time / encoding
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"

# Errors
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI / config
clap = { version = "4", features = ["derive", "env"] }

# Local crates
neige-session = { path = "../neige-session" }
