[package]
name = "neige-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["fs", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
portable-pty = "0.8"
clap = { version = "4", features = ["derive"] }
bytes = "1"
reqwest = { version = "0.12", features = ["stream"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
blake3 = "1"
rand = "0.8"
subtle = "2"
base64 = "0.22"
hex = "0.4"
url = "2"
time = "0.3"
neige-session = { path = "../neige-session" }
libc = "0.2"
# Used by the MCP tool registry to derive each tool's input_schema from
# its argument struct, so the schema and the Args type can never drift.
schemars = { version = "0.8", features = ["uuid1"] }
